--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,5 +6,11 @@
         @include wid(130px);
         height: 30px;
         border: 1px solid #f00;
+        transform: translate(0, 4px);
+        transition: height 0.4s;
+        animation: fadeInUp 0.4s forwards;
+        border-radius: 4px;
+        background-size: contain;
+        flex: 0%;
     }
 }
