--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,12 +1,620 @@
-
 @import "mixin";
-.a {
-    width: 31px;
-    height: 325px;
-    .b {
-        @include wid(230px);
+
+/* CSS Reset */
+body, div, span, object, iframe, input, h1, h2, h3, h4, h5, h6, p, pre, a, acronym, address, code, del, em, font, img, ins, strong, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, table, tbody, tfoot, thead, tr, th, td {
+    padding: 0;
+    margin: 0; }
+  
+  table {
+    border-collapse: collapse;
+    border-spacing: 0; }
+  
+  ins {
+    text-decoration: none; }
+  
+  del {
+    text-decoration: line-through; }
+  
+  input, select {
+    vertical-align: middle; }
+  
+  input, textarea, select {
+    font: 12px/1.5 "microsoft yahei", Arial, sans-serif; }
+  
+  fieldset, img {
+    border: 0; }
+  
+  address, code, th, em {
+    font-style: normal; }
+  
+  ol, ul {
+    list-style: none; }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 100%; }
+  
+  /* bass css */
+  body {
+    position: relative;
+    margin: 0 auto;
+    font: 14px/1.5 "microsoft yahei", Arial, sans-serif;
+    color: #666;
+    line-height: 1.5;
+    background: #f5f5f5; }
+    body.ox {
+      overflow-x: hidden; }
+    body.oh {
+      overflow: hidden; }
+  
+  body.bg {
+    background-color: #f2f2f2; }
+  
+  html, body {
+    height: 100%; }
+  
+  html.ovh {
+    height: 100%;
+    overflow: hidden; }
+    html.ovh body {
+      height: 100%;
+      overflow: hidden; }
+  
+  .wrapper {
+    margin: 0 auto;
+    width: 1412px; }
+  
+  .clearfix:after {
+    content: "";
+    height: 0;
+    visibility: hidden;
+    display: block;
+    clear: both; }
+  
+  .clearfix {
+    zoom: 1; }
+  
+  .clear {
+    clear: both; }
+  
+  a {
+    text-decoration: none;
+    outline: none;
+    cursor: pointer; }
+  
+  .absolute {
+    position: absolute; }
+  
+  .relative {
+    position: relative; }
+  
+  .center {
+    text-align: center; }
+  
+  .fl {
+    float: left; }
+  
+  .fr {
+    float: right; }
+  
+  .transparent {
+    opacity: 0; }
+  
+  .hide {
+    display: none !important; }
+
+header {
+    height: 400px;
+    background: url(../img/header-bg.jpg) center no-repeat;
+    .top-con {
+        height: 86px;
+        position: relative;
+        h1 {
+            font-size: 27px;
+            color: #fff;
+            font-weight: normal;
+            text-align: center;
+            line-height: 86px;
+        }
+    }
+    .ico-back {
+        background: url(../img/spr.png) 0 -20px;
+        height:32px;
+        width:20px;
+        margin: 27px 0 0 24px;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    .btn-share {
+        position: absolute;
+        right: 24px;
+        top: 27px;
+        i {
+            display: inline-block;
+            vertical-align: middle;
+            height:32px;
+            width:32px;
+            background: url(../img/spr.png) 0 -184px;
+            margin-right: 10px;
+        }
+        span {
+            vertical-align: middle;
+            font-size: 21px;
+            color: #fff;
+        }
+    }
+    .user-con {
+        margin-top: 56px;
+    }
+    .user-info {
+        margin-left: 28px;
+    }
+    .avatar {
+        position: relative;
+        display: inline-block;
+        vertical-align: middle;
+        width: 110px;
+        height: 110px;
+    }
+    .avatar-img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+    .ico-vip {
+        position: absolute;
+        right: -8px;
+        bottom: 0;
+        height:25px;
+        width:49px;
+        background: url(../img/spr.png);
+    }
+    .svip {
+        background-position: 0 -354px;
+    }
+    .username {
+        vertical-align: middle;
+        margin-left: 14px;
+        font-size: 24px;
+        color: #fff;
+    }
+    .mini-prog {
+        height:76px;
+        width:157px;
+        background: url(../img/spr.png) 0 -493px;
+        i {
+            float: left;
+            height:18px;
+            width:21px;
+            background: url(../img/spr.png) 0 -52px;
+            margin: 32px 0 0 24px;
+        }
+        span {
+            color: #fff;
+            font-size: 20px;
+            float: left;
+            margin: 23px 0 0 8px;
+        }
+    }
+    .data-con {
+        margin-top: 65px;
+        li {
+            line-height: 1;
+            border-left: 1px solid rgba(255,255,255,0.3);
+            padding: 0 35px;
+            font-size: 18px;
+            color: #fff;
+            display: inline-block;
+            &:first-child {
+                border-left: 0;
+            }
+        }
+        .label {
+            margin-right: 8px;
+        }
+    }
+}
+.main {
+    position: absolute;
+    left: 0;
+    top: 400px;
+    bottom: 100px;
+    width: 100%;
+    .menu {
+        background: #fff;
+        border-bottom: 1px solid #ebebeb;
+        height: 90px;
+        line-height: 90px;
+        text-align: justify;
+        padding: 0 86px;
+        &:after {
+            content: '';
+            width: 100%;
+            display: inline-block;
+            height: 0;
+            overflow: hidden;
+        }
+        li {
+            display: inline-block;
+            vertical-align: middle;
+            text-align: center;
+        }
+        a {
+            display: block;
+            font-size: 22px;
+            position: relative;
+            color: #333;
+            &.on {
+                font-weight: bold;
+                &:after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    height: 5px;
+                    border-radius: 3px;
+                    background-image: linear-gradient(to left, #7f7dd9, #8992d8);
+                }
+            }
+        }
+    }
+    .ctrl-bar {
+        background: #fff;
+        padding: 28px 25px 25px 20px;
+    }
+    .search-bar {
+        width: 490px;
+        height: 60px;
+        line-height: 60px;
+        border-radius: 30px;
+        background: #f2f2f2;
+        input {
+            width: 310px;
+            height: 100%;
+            margin-left: 10px;
+            font-size: 21px;
+            color: #333;
+            background: none;
+            outline: none;
+            border:0;
+            vertical-align: middle;
+        }
+        .split {
+            width: 0;
+            height: 30px;
+            border-right: 1px solid #999;
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 30px;
+        }
+    }
+    .ico-search {
+        margin: 5px 0 0 34px;
+        height:26px;
+        width:27px;
+        background: url(../img/spr.png) 0 -98px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .ico-pic {
+        height:39px;
+        width:39px;
+        background: url(../img/spr.png) 0 -216px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .ctrl-right {
+        margin-top: 10px;
+    }
+    .btn-order {
+        height:28px;
+        width:28px;
+        background: url(../img/spr.png) 0 -125px;
+        margin-right: 35px;
+        margin-top: 3px;
+    }
+    .btn-filter {
+        position: relative;
+        font-size: 21px;
         color: #333;
-        border: 1px solid #ff0;
-        transition: transform 0.5s;
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: -11px;
+            width: 1px;
+            background: #999;
+        }
+        i {
+            height:27px;
+            width:26px;
+            background: url(../img/spr.png) 0 -71px;
+            display: inline-block;
+            vertical-align: middle;
+            margin: 0 5px 0 13px;
+        }
+        span {
+            vertical-align: middle;
+            font-size: 21px;
+            color: #333;
+        }
+    }
+}
+.goods-list {
+    position: absolute;
+    top: 204px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: auto;
+    li {
+        background: #fff;
+        padding-left: 90px;
+        position: relative;
+        &.set-top {
+            background: #f7f7ff;
+        }
+    }
+    .date-txt {
+        position: absolute;
+        width: 60px;
+        left: 30px;
+        top: 18px;
+        color: #333;
+        &:after {
+            @include tri('right', 8px, #333);
+            content: '';
+            position: absolute;
+            right: 6px;
+            top: 38px;
+        }
+        &.one-line {
+            width: 70px;
+            left: 20px;
+            font-size: 23px;
+            &:after {
+                top: 12px;
+            }
+        }
+    }
+    .month {
+        font-size: 17px;
+        color: #333;
+    }
+    .day {
+        font-size: 22px;
+    }
+    .item-main {
+        border-bottom: 1px solid #ededed;
+        padding: 18px 0 16px;
+    }
+    .goods-img {
+        width: 156px;
+        height: 156px;
+    }
+    .info {
+        margin-left: 20px;
+        width: 455px;
+    }
+    h3 {
+        font-size: 22px;
+        color: #333;
+        height: 66px;
+        font-weight: normal;
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        span {
+            display: inline-block;
+            vertical-align: middle;
+            height: 34px;
+            line-height: 34px;
+            width: 84px;
+            text-align: center;
+            border-radius: 6px;
+            background: #ebebff;
+            font-size: 19px;
+            color: #333;
+        }
+    }
+    .status {
+        margin-top: 50px;
+        font-size: 17px;
+        color: #999;
+        span {
+            margin-right: 25px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+        .lock {
+            position: relative;
+            &:before {
+                content: '';
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: 6px;
+                height:20px;
+                width:14px;
+                background: url(../img/spr.png);
+            }
+        }
+    }
+    .goods-ctrl-bar {
+        margin: 24px 35px 0 0;
+    }
+    .ctrl-left {
+        margin-top: 14px;
+    }
+    .btn-attr {
+        font-size: 18px;
+        color: #999;
+        margin-right: 56px;
+        &.on {
+            &:before {
+                @include tri('bottom', 8px, #999);
+            }
+        }
+        &:before {
+            @include tri('right', 8px, #999);
+            content: '';
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 8px;
+        }
+    }
+    .other-btn {
+        font-size: 18px;
+        color: #7c75da;
+        margin-right: 66px;
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+    .btn-share {
+        width: 110px;
+        height: 55px;
+        border-radius: 28px;
+        color: #fff;
+        text-align: center;
+        line-height: 55px;
+        font-size: 20px;
+        letter-spacing: 4px;
+        background-image: linear-gradient(to left, #7f7dd9, #8993d8);
+    }
+}
+.goods-attr-con {
+    margin: 20px 35px 0 0;
+    color: #999;
+    display: none;
+    font-size: 15px;
+    &.on {
+        display: block;
+    }
+    dl {
+        position: relative;
+        padding-left: 70px;
+        margin-bottom: 5px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    dt {
+        position: absolute;
+        left: 0;
+        top: 2px;
+    }
+    span {
+        width: 56px;
+        height: 24px;
+        line-height: 24px;
+        border-radius: 12px;
+        text-align: center;
+        vertical-align: middle;
+        display: inline-block;
+        margin: 0 9px 9px 0;
+        border: 1px solid #999;
+    }
+}
+.bottom-txt {
+    text-align: center;
+    margin-top: 36px;
+    font-size: 18px;
+    color: #999;
+    padding-bottom: 30px;
+}
+.menu-bar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 102px;
+    border-top: 1px solid #ebebeb;
+    text-align: center;
+    &:before {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 1px solid #ebebeb;
+        position: absolute;
+        z-index: -1;
+        content: '';
+        top: -20px;
+        left: 50%;
+        margin-left: -40px;
+        background: #fff;
+    }
+    &:after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: #fff;
+        content: '';
+    }
+    li {
+        display: inline-block;
+        vertical-align: bottom;
+        position: relative;
+        z-index: 2;
+        width: 108px;
+        margin: 0 60px;
+        font-size: 15px;
+        color: #808080;
+    }
+    i {
+        background: url(../img/spr.png);
+        display: block;
+        margin: 0 auto;
+    }
+    .ico-cate {
+        height:39px;
+        width:40px;
+        background-position:0 -291px;
+    }
+    .ico-post {
+        height:76px;
+        width:76px;
+        background-position:-76px -204px;
+    }
+    .ico-folder {
+        height:36px;
+        width:40px;
+        background-position:0 -255px;
+    }
+    p {
+        margin-top: 4px;
+    }
+    .btn-center {
+        margin-top: -11px;
+    }
+}
+.btn-to-top {
+    position: fixed;
+    right: 20px;
+    bottom: 320px;
+    width: 98px;
+    height: 98px;
+    border: 1px solid #999;
+    border-radius: 50%;
+    background: #fff;
+    i {
+        display: block;
+        margin: 20px auto 0;
+        height:24px;
+        width:44px;
+        background: url(../img/spr.png) 0 -331px;
+    }
+    p {
+        margin-top: 4px;
+        text-align: center;
+        font-size: 29px;
+        color: #b2b2b2;
     }
 }
